--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
 			<span class="navbar-brand mb-0 h1">Asset Tracker</span>
 			<div class="collapse navbar-collapse justify-content-end">
 				<div class="navbar-nav">
-					<a class="nav-item nav-link active" href="#">Dashboard</a>
-					<a class="nav-item nav-link" href="#">Assets</a>
+					<a class="nav-item nav-link active" href="{{ url_for('ui.ui_index') }}">Dashboard</a>
+					<a class="nav-item nav-link" href="{{ url_for('ui.ui_assets') }}">Assets</a>
 					<a class="nav-item nav-link" href="#">Users</a>
 					<span class="px-5"></span>
 					<div class="nav-item py-2 navbar-text">Logged in as <span class="font-weight-bold">{{ g.user.name }}</span></div>
@@ -82,6 +82,24 @@
 					if (res.success == true) {
 						$('#asset-info').empty()
 						var data = res.results
+						var status = ""
+						switch (data.status) {
+							case 0:
+								status = "Needs Repairs"
+								break;
+							case 1:
+								status = "Available"
+								break;
+							case 2:
+								status = "Unavailable"
+								break;
+							case 3:
+								status = "In Use"
+								break;
+							case 4:
+								status = "Deployed"
+								break;
+						}
 						console.log(data)
 						$('#asset-info').append(`
 							<li class="list-group-item text-left">
@@ -89,6 +107,9 @@
 							</li>
 							<li class="list-group-item text-left">
 								<b>Asset Type: </b> ${data.type}
+							</li>
+							<li class="list-group-item text-left">
+								<b>Status: </b> ${status}
 							</li>
 							<li class="list-group-item text-left">
 								<b>Location:</b> ${data.location}
