--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 						<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Assets</a>
 						<div class="dropdown-menu">
 							<a class="dropdown-item" href="{{ url_for('ui.ui_assets') }}">Assets</a>
-							<a class="dropdown-item" href="#">Add Asset</a>
+							<a class="dropdown-item" href="{{ url_for('ui.ui_assets') }}#add">Add Asset</a>
 						</div>
 					</div>
 					<a class="nav-item nav-link" href="#">Users</a>
@@ -35,6 +35,11 @@
 					<div class="card-body text-center">
 						<h5 class="card-title mb-0">Users</h5>
 						<p class="card-text">The most active recent users</p>
+						<a class="btn btn-primary pb-0 pl-2" href="#" title="View All Users">
+							<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-people-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+								<path fill-rule="evenodd" d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z"/>
+							</svg>
+						</a>
 					</div>
 					<ul class="list-group list-group-flush text-center">
 					{% for u in list_users_quick() %}
@@ -48,6 +53,17 @@
 					<div class="card-body text-center">
 						<h5 class="card-title mb-0">Assets</h5>
 						<p class="card-text">Latest Updated Assets</p>
+						<a class="btn btn-primary pb-0 pl-2" href="{{ url_for('ui.ui_assets') }}" title="View All Assets">
+							<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-files" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+								<path fill-rule="evenodd" d="M4 2h7a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 1a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1H4z"/>
+								<path d="M6 0h7a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2v-1a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H6a1 1 0 0 0-1 1H4a2 2 0 0 1 2-2z"/>
+							</svg>
+						</a>
+						<a class="btn btn-success pb-0" href="{{ url_for('ui.ui_assets') }}#add" title="Add Asset">
+							<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cloud-plus-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+								<path fill-rule="evenodd" d="M8 2a5.53 5.53 0 0 0-3.594 1.342c-.766.66-1.321 1.52-1.464 2.383C1.266 6.095 0 7.555 0 9.318 0 11.366 1.708 13 3.781 13h8.906C14.502 13 16 11.57 16 9.773c0-1.636-1.242-2.969-2.834-3.194C12.923 3.999 10.69 2 8 2zm.5 4a.5.5 0 0 0-1 0v1.5H6a.5.5 0 0 0 0 1h1.5V10a.5.5 0 0 0 1 0V8.5H10a.5.5 0 0 0 0-1H8.5V6z"/>
+							</svg>
+						</a>
 					</div>
 					<ul class="list-group list-group-flush text-center">
 					{% for a in latest_updated_assets() %}
