--- a/templates/login.html
+++ b/templates/login.html
@@ -43,6 +43,9 @@
 				<button type="submit" class="btn btn-success col-12">
 					Login
 				</button>
+				<a class="nav-item nav-link col-12 d-flex justify-content-center" href="/register">
+					Register
+				</a>
 			</div>
 		</form>
 	</div>
