--- a/templates/register.html
+++ b/templates/register.html
@@ -93,7 +93,7 @@
 			if(passconfirm == pass){
 				$.ajax({
 					type: "POST",
-					url: '{{ url_for('api.create_new_user') }}',
+					url: '{{ url_for('api.create_new_user') }}?_=' + new Date().getTime(),
 					contentType: "application/json",
 					dataType: 'json',
 					data: JSON.stringify({"username": user, "password": pass, "name": name}),
