Asset Logs fix #2

--- a/templates/logs.html
+++ b/templates/logs.html
@@ -106,11 +106,7 @@
 
 		// Data Table
 		$('#logsTable').DataTable({
-			"aaSorting": [],
-			columnDefs: [{
-				orderable: false,
-				targets: 6
-			}]
+			"aaSorting": []
 		})
 		$('.dataTables_length').addClass('bs-select');
 
