--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
 					<div class="card-body text-center">
 						<h5 class="card-title mb-0">Users</h5>
 						<p class="card-text">The most active recent users</p>
-						<a class="btn btn-primary pb-0 pl-2" href="#" title="View All Users">
+						<a class="btn btn-primary pb-0 pl-2" href="{{ url_for('ui.ui_users') }}" title="View All Users">
 							<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-people-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 								<path fill-rule="evenodd" d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z"/>
 							</svg>
@@ -44,7 +44,7 @@
 					</div>
 					<ul class="list-group list-group-flush text-center">
 					{% for u in list_users_quick() %}
-						<li class="list-group-item"><a href="#">{{ u.name }} ({{ u.username }})</a></li>
+						<li class="list-group-item"><a href="{{ url_for('ui.ui_users') }}#user/{{ u.id }}">{{ u.name }} ({{ u.username }})</a></li>
 				 	{% endfor %}
 					</ul>
 				</div>
